@@ -21,6 +21,7 @@ ___________________________________________________________
 -> Fixed options and removal in maps mod (palle!)
 -> Fixed php error handling with @ sign (hajo)
 -> Improved magic_quotes detection and handling (hajo)
+-> Removed author from news rss feed (hajo)
 -> Reworked servers mod (fr33z3m4n)
 
 -- Fixed a few bugs that were reported at "Trac" --
